# bpnet

./: CMakeLists.txt  README.md  test.txt  train.txt
inc/: data.hpp  layer.hpp  net.hpp  neuron.hpp
src/: data.cc  layer.cc  main.cc  net.cc  neuron.cc
